<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.fhs.smartsigncapture.view.activity.SaveDictionaryEntryActivity">

    <TextView
        android:id="@+id/txHeader"
        style="@style/TextAppearance.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_dictionary_entry" />

    <TextView
        android:layout_below="@+id/txHeader"
        android:id="@+id/lbName"
        style="@style/FormLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:text="@string/name" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbName"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:inputType="text" />

    <TextView
        android:layout_below="@+id/edName"
        android:id="@+id/lbTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormLabel"
        android:text="@string/tags" />

    <at.fhs.smartsigncapture.view.autocomplete.TagCompletionView
        android:layout_below="@+id/lbTags"
        android:id="@+id/tokenView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@+id/editText"
        android:textColor="@android:color/darker_gray"

        android:textSize="19sp" />



    <!--<TextView-->
    <!--style="@style/TextAppearance.Medium"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/tags" />-->


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSave"
        style="@style/FAB.ok" />


</RelativeLayout>
